--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "vue-admin-template",
-  "version": "4.2.1",
-  "description": "A vue admin template with Element UI & axios & iconfont & permission control & lint",
-  "author": "Pan <panfree23@gmail.com>",
-  "license": "MIT",
+  "name": "vue-admin-seed",
+  "version": "1.0.0",
+  "description": "A Vue.js 2.x admin seed project.",
+  "author": "Duelsol",
   "scripts": {
     "dev": "vue-cli-service serve",
     "build:prod": "vue-cli-service build",
@@ -14,14 +13,25 @@
     "test:ci": "npm run lint && npm run test:unit",
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,vue}": [
+      "eslint --fix"
+    ]
+  },
   "dependencies": {
-    "axios": "0.18.1",
+    "axios": "0.19.0",
     "element-ui": "2.13.0",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
     "vue": "2.6.10",
+    "vue-i18n": "7.8.0",
     "vue-router": "3.0.6",
     "vuex": "3.1.0"
   },
@@ -32,6 +42,7 @@
     "@vue/cli-plugin-eslint": "^3.9.1",
     "@vue/cli-plugin-unit-jest": "3.6.3",
     "@vue/cli-service": "3.6.0",
+    "@vue/eslint-config-standard": "^4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "autoprefixer": "^9.5.1",
     "babel-core": "7.0.0-bridge.0",
@@ -40,10 +51,13 @@
     "chalk": "2.4.2",
     "connect": "3.6.6",
     "eslint": "5.15.3",
-    "eslint-plugin-vue": "5.2.2",
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-vue": "^5.0.0",
     "html-webpack-plugin": "3.2.0",
+    "husky": "^4.2.5",
     "mockjs": "1.0.1-beta3",
     "node-sass": "^4.9.0",
+    "prettier": "^1.18.2",
     "runjs": "^4.3.2",
     "sass-loader": "^7.1.0",
     "script-ext-html-webpack-plugin": "2.1.3",
