--- a/package.json
+++ b/package.json
@@ -55,9 +55,9 @@
     "eslint-plugin-vue": "^5.0.0",
     "html-webpack-plugin": "3.2.0",
     "husky": "^4.2.5",
+    "lint-staged": "^10.2.2",
     "mockjs": "1.0.1-beta3",
     "node-sass": "^4.9.0",
-    "prettier": "^1.18.2",
     "runjs": "^4.3.2",
     "sass-loader": "^7.1.0",
     "script-ext-html-webpack-plugin": "2.1.3",
